--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">My Nano App</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="my_title">My Nanodegree Apps!</string>
+    <string name="meda_streamer">Spotify Streamer</string>
+    <string name="super_duo1">Scores App</string>
+    <string name="super_duo2">Library App</string>
+    <string name="ant_terminator">Build IT Bigger</string>
+    <string name="materialize">XYZ Reader</string>
+    <string name="capstone">Capstone: My Own App</string>
 </resources>
