My App Portfolio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="my_title">My Nanodegree Apps!</string>
-    <string name="meda_streamer">Spotify Streamer</string>
+    <string name="media_streamer">Spotify Streamer</string>
     <string name="super_duo1">Scores App</string>
     <string name="super_duo2">Library App</string>
     <string name="ant_terminator">Build IT Bigger</string>
